--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "build": "node scripts/build.js",
     "test": "node scripts/test.js"
   },
+  "homepage": "/crm-maker",
   "eslintConfig": {
     "extends": "react-app"
   },
