--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "jest-environment-jsdom-fourteen": "1.0.1",
     "jest-resolve": "24.9.0",
     "jest-watch-typeahead": "0.4.2",
+    "koa": "^2.13.0",
+    "koa-static-cache": "^5.1.3",
     "less": "^3.12.2",
     "less-loader": "^6.2.0",
     "mini-css-extract-plugin": "0.9.0",
