--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-preset-react-app": "^9.1.2",
     "camelcase": "^5.3.1",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
+    "codemirror": "^5.56.0",
     "css-loader": "3.4.2",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
@@ -62,8 +63,10 @@
     "postcss-normalize": "8.0.1",
     "postcss-preset-env": "6.7.0",
     "postcss-safe-parser": "4.0.1",
+    "prettier": "^2.0.5",
     "react": "^16.13.1",
     "react-app-polyfill": "^1.0.6",
+    "react-codemirror2": "^7.2.1",
     "react-dev-utils": "^10.2.1",
     "react-dom": "^16.13.1",
     "react-sortablejs": "^2.0.11",
