fix(oss): delete old files

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,4 +38,6 @@ jobs:
           access-key-id: ${{ secrets.OSS_KEY_ID }}
           access-key-secret: ${{ secrets.OSS_KEY_SECRET }}
       - name: cp files to aliyun
-        run: ossutil cp -rf build oss://hub-dappwind/crm-maker/
+        run: |
+          ossutil rm -rf oss://hub-dappwind/crm-maker/*
+          ossutil cp -rf build oss://hub-dappwind/crm-maker/
