--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "camelcase": "^5.3.1",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
     "codemirror": "^5.56.0",
+    "codesandbox": "^2.1.16",
     "css-loader": "3.4.2",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
